# VirtualSoundCard

./: build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: beauty_reshape.glsl  beauty_smooth.glsl  beauty_whiten.glsl
app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp
app/src/main/cpp/dsp/: compressor.cpp  compressor.h  ducker.cpp  ducker.h  eq.cpp  eq.h  noise_gate.cpp  noise_gate.h  pitch_shifter.cpp  pitch_shifter.h  reverb.cpp  reverb.h
app/src/main/java/com/marvis/vs/: MainActivity.kt
app/src/main/java/com/marvis/vs/audio/: AudioEngine.kt
app/src/main/java/com/marvis/vs/beauty/: BeautyRenderer.kt  FaceDetector.kt
app/src/main/java/com/marvis/vs/camera/: CameraController.kt
app/src/main/java/com/marvis/vs/recorder/: MediaRecorder.kt
app/src/main/res/drawable/: bg_record_btn.xml
app/src/main/res/layout/: activity_main.xml
